--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -14,7 +14,7 @@
   --ifm-color-primary-lighter: #359962;
   --ifm-color-primary-lightest: #3cad6e;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  /* --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1); */
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -28,3 +28,13 @@
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
+.docusaurus-highlighted-code-line {
+  background-color: rgba(0,0,0,0.1);
+  display: block;
+  margin: 0 calc(-1 *var(--ifm-pre-padding));
+  padding: 0 var(--ifm-pre-padding);
+}
+html[data-theme='dark'] .docusaurus-highlighted-code-line {
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
